...
    }
    
    // MARK: Alerts
    
    private func showError(_ errorMessage: String) {
        GoogleAnalyticsLogger.logEvent(name: "login", key: "result", value: "failture")
        let alert = UIAlertController(title: "Ошибка авторизации", message: errorMessage, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ок(", style: .default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    private func showFillError() {
        let alert = UIAlertController(title: "Ошибка", message: "Поля не заполнены", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ок(", style: .default, handler: nil))
...
